Add exchange configuration overrides